--- a/css/style.scss
+++ b/css/style.scss
@@ -205,7 +205,7 @@ a.big-btn {
  }
  .example_f:hover span:after {
    opacity: 1;
-   right: 0;
+   right: 0; 
  }
 }
 
@@ -221,6 +221,9 @@ header#masthead {
   a.btn.bg-blue.white img {
     position: relative;
     bottom: 1px;
+  }
+  .header-logo {
+    max-height: 82px;
   }
   @media screen and (max-width: 480px) {
     .header-hamburger-col {
