--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -205,7 +205,7 @@ a.big-btn {
  }
  .example_f:hover span:after {
    opacity: 1;
-   right: 0; 
+   right: 0;
  }
 }
 
@@ -1267,4 +1267,22 @@ body.privacy-policy {
       display: none;
     }
   }
+}
+
+.legal-page table {
+  border: none;
+  word-break: break-all;
+  margin-top: 20px;
+  margin-bottom: 20px
+}
+
+.legal-page table tr {
+  border-top: 1px solid #7ba7d3;
+  border-bottom:1px solid #7ba7d3
+}
+
+.legal-page table tr td,.legal-page table tr th {
+  border: none;
+  border-right: 1px solid #7ba7d3;
+  padding:5px
 }
