Add banner top for all templates

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -173,40 +173,40 @@ a.big-btn {
 
 .arrow-cta {
   example_f {
-   border-radius: 4px;
-   background: linear-gradient(to right, #67b26b, #4ca2cb) !important;
-   border: none;
-   color: #FFFFFF;
-   text-align: center;
-   text-transform: uppercase;
-   font-size: 22px;
-   padding: 20px;
-   width: 200px;
-   transition: all 0.4s;
-   cursor: pointer;
-   margin: 5px;
- }
- .example_f span {
-   cursor: pointer;
-   display: inline-block;
-   position: relative;
-   transition: 0.4s;
- }
- .example_f span:after {
-   content: '\00bb';
-   position: absolute;
-   opacity: 0;
-   top: 0;
-   right: -20px;
-   transition: 0.5s;
- }
- .example_f:hover span {
-   padding-right: 25px;
- }
- .example_f:hover span:after {
-   opacity: 1;
-   right: 0;
- }
+    border-radius: 4px;
+    background: linear-gradient(to right, #67b26b, #4ca2cb) !important;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 22px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.4s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  .example_f span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.4s;
+  }
+  .example_f span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  .example_f:hover span {
+    padding-right: 25px;
+  }
+  .example_f:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
 }
 
 
@@ -1286,3 +1286,30 @@ body.privacy-policy {
   border-right: 1px solid #7ba7d3;
   padding:5px
 }
+
+#top_banner {
+  height: 52px;
+  background-image: url("../img/conan_banner.png");
+  background-size: cover;
+  background-position: center center;
+}
+#top_banner a {display: inline-block; width: 100%; height: 100%;}
+
+#top_banner #close_banner {
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 20px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: $sm) {
+  #top_banner {display: none;}
+}
+
+@media screen and (max-width: $lg) {
+  #top_banner {
+    height: 34px;
+  }
+}
+
