--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1287,29 +1287,57 @@ body.privacy-policy {
   padding:5px
 }
 
-#top_banner {
-  height: 52px;
-  background-image: url("../img/conan_banner.png");
-  background-size: cover;
-  background-position: center center;
-}
-#top_banner a {display: inline-block; width: 100%; height: 100%;}
+// @font-face {
+//   font-family: 'BebasNeue';
+//   src: url(../../fonts/BebasNeue-Regular.ttf) format('truetype');}
 
-#top_banner #close_banner {
-  left: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 20px;
-  cursor: pointer;
+/* latin-ext */
+@font-face {
+  font-family: 'Bebas Neue';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Bebas Neue Regular'), local('BebasNeue-Regular'), url(https://fonts.gstatic.com/s/bebasneue/v2/JTUSjIg69CK48gW7PXoo9WdhyyTh89ZNpQ.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Bebas Neue';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Bebas Neue Regular'), local('BebasNeue-Regular'), url(https://fonts.gstatic.com/s/bebasneue/v2/JTUSjIg69CK48gW7PXoo9WlhyyTh89Y.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-@media screen and (max-width: $sm) {
-  #top_banner {display: none;}
-}
 
-@media screen and (max-width: $lg) {
-  #top_banner {
-    height: 34px;
+.training-video {
+  width: 25%;
+
+  @media (min-width: 1281px) {
+    width: 20%;
+  }
+  @media (min-width: 1025px) and (max-width: 1280px) {
+    width: 20%;
   }
 }
 
+.training-text {
+  font-family: Bebas Neue,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-size: 1.25rem;
+  // letter-spacing: -.02em;
+  font-weight: 500;
+  line-height: 1.2;
+  text-transform: uppercase;
+}
+
+.training-text a {
+  text-decoration: none;
+  color: inherit;
+}
+
+hr.dotted {
+  border-top: 1px dotted $green;
+}
+
+.xs-text {
+  font-size: 0.95rem;
+}
