--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1074,6 +1074,9 @@ body.privacy-policy ul {
   src: local("Bebas Neue Regular"), local("BebasNeue-Regular"), url(https://fonts.gstatic.com/s/bebasneue/v2/JTUSjIg69CK48gW7PXoo9WlhyyTh89Y.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 
+.training {
+  padding-top: 4rem; }
+
 .training-video {
   width: 25%; }
   @media (min-width: 1281px) {
