Change styles to better show anchors

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1098,6 +1098,11 @@ body.privacy-policy ul {
   text-decoration: none;
   color: inherit; }
 
+.training-text:hover {
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  transition: box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+  color: var(--blue); }
+
 hr.dotted {
   border-top: 1px dotted #40be46; }
 
