--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1338,6 +1338,12 @@ body.privacy-policy {
   color: inherit;
 }
 
+.training-text:hover {
+  box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
+  transition: box-shadow .4s cubic-bezier(.25,.8,.25,1);
+  color: var(--blue);
+}
+
 hr.dotted {
   border-top: 1px dotted $green;
 }
