--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1426,6 +1426,9 @@ body.tribe {
       }
     }
   }
+  .company {
+    border-bottom: 1px solid #cecece;
+  }
   .tribes-hero {
     background-image: url('../img/tribes-hero-background.png');
   }
