--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1532,3 +1532,33 @@ ul.blue-bullets {
 .bg-mid-blue {
   background-color: $mid-blue;
 }
+
+.home-banner {
+  background-size: cover;
+  background-position: center;
+  @media screen and (max-width: 768px) {
+    background-size: 1920px 100%;
+  }   
+  p {
+    width: 536px;
+    max-width: 100%;
+  }
+}
+
+a.green-cta {
+  color: white !important;
+  min-width: 190px;
+  height: 48px;
+  padding: 10px 15px;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  background: $green;
+  transition: all 0.32s ease;
+  font-family: Open Sans, sans-serif;
+  font-size: 20px;
+  &:hover {
+    background: #4ac750;
+  }
+}
