--- a/src/css/style.css
+++ b/src/css/style.css
@@ -326,6 +326,8 @@ header#masthead {
     bottom: 1px; }
   header#masthead .header-logo {
     max-height: 82px; }
+  header#masthead #searchInput {
+    height: 37px; }
   @media screen and (max-width: 480px) {
     header#masthead .header-hamburger-col {
       padding-right: 5px; }
@@ -796,6 +798,14 @@ footer#siteFooter {
     footer#siteFooter ul.socials a:hover {
       opacity: 0.5; }
 
+section#downloads #artifactoryZipPackage .info-circle {
+  right: -30px;
+  top: 0;
+  bottom: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 29px; }
+
 section#downloads button.dropdown-toggle:after {
   margin-right: 15px;
   color: #8b8b8b;
@@ -823,6 +833,9 @@ section#downloads .ncta {
   font-weight: 500; }
   section#downloads .ncta:hover {
     opacity: .9; }
+  section#downloads .ncta.fcv-cta {
+    width: 225px;
+    height: 57px; }
 
 section#downloads .downloads-item-wrapper {
   height: 100%; }
@@ -851,7 +864,9 @@ section#downloads h5 {
   font-size: 17px; }
 
 section#downloads .package-wrapper {
-  margin-bottom: 8px; }
+  margin-bottom: 8px;
+  width: 530px;
+  max-width: 100%; }
   section#downloads .package-wrapper textarea {
     z-index: -100;
     opacity: 0; }
@@ -892,7 +907,7 @@ section#downloads .cn-box {
       section#downloads .cn-box.big {
         font-size: 16px; } }
   section#downloads .cn-box.cn-main {
-    width: 344px; }
+    width: 342px; }
     section#downloads .cn-box.cn-main#artiZipMain {
       width: auto;
       padding-right: 20px; }
@@ -935,7 +950,8 @@ section#downloads .cn-box {
     background-color: #D7D7D7;
     background-repeat: no-repeat;
     background-position: center center;
-    transition: all 0.32s ease; }
+    transition: all 0.32s ease;
+    margin-right: 0; }
     section#downloads .cn-box.cn-action:hover {
       background-color: #7BA7D3;
       border-color: #7BA7D3; }
@@ -1131,6 +1147,9 @@ hr.dotted {
 .bg-cover {
   background-size: cover; }
 
+.open-sans {
+  font-family: 'Open Sans', sans-serif !important; }
+
 body.tribe #conanTribeMemberModal.modal .modal-dialog {
   max-width: 900px; }
   body.tribe #conanTribeMemberModal.modal .modal-dialog .modal-content {
@@ -1283,3 +1302,270 @@ a.green-cta {
   font-size: 20px; }
   a.green-cta:hover {
     background: #4ac750; }
+
+/*the container must be positioned relative:*/
+.autocomplete {
+  position: relative;
+  display: inline-block; }
+
+input {
+  border: 1px solid transparent;
+  background-color: #f1f1f1;
+  padding: 4px;
+  font-size: 16px; }
+
+input[type=text] {
+  background-color: #f1f1f1;
+  width: 100%; }
+
+input[type=submit] {
+  background-color: DodgerBlue;
+  color: #fff;
+  cursor: pointer; }
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0; }
+
+.autocomplete-items div {
+  padding: 5px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4; }
+
+/*when hovering an item:*/
+.autocomplete-items div:hover {
+  background-color: #e9e9e9; }
+
+/*when navigating through the items using the arrow keys:*/
+.autocomplete-active {
+  background-color: DodgerBlue !important;
+  color: #ffffff; }
+
+/* Create two equal columns that float next to each other */
+.at-column-70 {
+  float: left;
+  width: 70%;
+  padding: 5px;
+  text-align: left; }
+
+.at-column-30 {
+  float: left;
+  width: 30%;
+  padding: 5px;
+  text-align: left; }
+
+/* Clear floats after the columns */
+.at-row:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.see-all {
+  text-align: center;
+  padding: 10px !important; }
+
+.pkg-name, .pkg-version, .see-all {
+  font-size: 0.75rem; }
+
+@media (min-width: 1025px) {
+  .header-nav .show-lg-and-up {
+    display: block; }
+  .header-nav .show-md-and-down {
+    display: none; } }
+
+@media (max-width: 1024px) {
+  .header-nav .show-md-and-down {
+    display: block; }
+  .header-nav .show-lg-and-up {
+    display: none; } }
+
+#openSourceSubscribeModal {
+  font-size: 20px;
+  font-family: "Open Sans", sans-serif !important; }
+  #openSourceSubscribeModal * {
+    border-radius: 0; }
+  #openSourceSubscribeModal button.close {
+    top: 10px;
+    right: 10px;
+    font-weight: 200;
+    font-size: 20px; }
+  #openSourceSubscribeModal .modal-dialog {
+    max-width: 850px; }
+    #openSourceSubscribeModal .modal-dialog .modal-body {
+      max-height: 100vh; }
+      @media screen and (min-width: 768px) {
+        #openSourceSubscribeModal .modal-dialog .modal-body {
+          height: 500px; } }
+      #openSourceSubscribeModal .modal-dialog .modal-body .splitter .left {
+        background: #7BA7D3;
+        width: 100%; }
+        @media screen and (min-width: 768px) {
+          #openSourceSubscribeModal .modal-dialog .modal-body .splitter .left {
+            width: 40%; } }
+      #openSourceSubscribeModal .modal-dialog .modal-body .splitter .right {
+        width: 100%; }
+        #openSourceSubscribeModal .modal-dialog .modal-body .splitter .right h2 {
+          font-size: 40px; }
+        #openSourceSubscribeModal .modal-dialog .modal-body .splitter .right p {
+          color: #717171;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 20px; }
+        @media screen and (min-width: 768px) {
+          #openSourceSubscribeModal .modal-dialog .modal-body .splitter .right {
+            width: 60%; } }
+  #openSourceSubscribeModal form ::placeholder {
+    font-family: 'Open Sans', sans-serif !important; }
+  #openSourceSubscribeModal form button.mktoButton[type="submit"] {
+    background: #2F6799;
+    color: white;
+    width: 200px;
+    height: 50px;
+    line-height: 1;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0;
+    border: 0;
+    transition: all 0.32s ease;
+    margin-top: 20px; }
+    #openSourceSubscribeModal form button.mktoButton[type="submit"]:hover {
+      background: rgba(47, 103, 153, 0.85); }
+  #openSourceSubscribeModal form label#LblEmail, #openSourceSubscribeModal form .mktoGutter, #openSourceSubscribeModal form .mktoOffset, #openSourceSubscribeModal form .mktoClear, #openSourceSubscribeModal form .mktoAsterix {
+    display: none !important; }
+  #openSourceSubscribeModal form * {
+    font-family: 'Open Sans', sans-serif !important; }
+  #openSourceSubscribeModal form .mktoFormRow {
+    width: 330px !important;
+    max-width: 100% !important; }
+  #openSourceSubscribeModal form input[type="checkbox"] {
+    opacity: 0; }
+  #openSourceSubscribeModal form input[type="email"] {
+    height: 48px;
+    border: 1px solid #686868;
+    font-size: 15px;
+    width: 335px;
+    max-width: 100%;
+    padding: 15px;
+    border-radius: 0; }
+  #openSourceSubscribeModal form label {
+    font-size: 17px !important; }
+    #openSourceSubscribeModal form label a {
+      font-size: 17px !important;
+      color: black !important; }
+  #openSourceSubscribeModal form .mktoFormRow:nth-child(2) > .mktoFieldDescriptor.mktoFormCol {
+    margin-bottom: 0 !important;
+    position: relative;
+    left: -40px; }
+    #openSourceSubscribeModal form .mktoFormRow:nth-child(2) > .mktoFieldDescriptor.mktoFormCol > label#Lblacceptthetermsandconditions {
+      display: none !important; }
+  #openSourceSubscribeModal form .mktoHtmlText.mktoHasWidth {
+    width: 330px !important; }
+    #openSourceSubscribeModal form .mktoHtmlText.mktoHasWidth span[style="font-size: 10px;"] {
+      position: relative;
+      left: 70px;
+      top: 3px;
+      font-size: 16.7px !important;
+      font-weight: normal; }
+      #openSourceSubscribeModal form .mktoHtmlText.mktoHasWidth span[style="font-size: 10px;"] a {
+        font-weight: bold;
+        font-size: 16.7px; }
+      @media screen and (max-width: 576px) {
+        #openSourceSubscribeModal form .mktoHtmlText.mktoHasWidth span[style="font-size: 10px;"] {
+          top: 6px; } }
+  #openSourceSubscribeModal form span[style="margin-left: 120px;"] {
+    margin-left: 0 !important; }
+  #openSourceSubscribeModal form .marketo-submit-row {
+    margin-top: 15px; }
+  @media screen and (max-width: 576px) {
+    #openSourceSubscribeModal form .magic-checkbox + label:before {
+      top: -40px;
+      left: 10px; }
+    #openSourceSubscribeModal form .mkto-checkbox-form-row > .mktoFormCol:not(.mktoFieldDescriptor) {
+      display: none !important; } }
+
+.magic-checkbox-error:before {
+  border-color: red !important;
+  border-width: 2px !important; }
+
+.magic-radio,
+.magic-checkbox {
+  position: absolute;
+  display: none; }
+
+.magic-radio[disabled],
+.magic-checkbox[disabled] {
+  cursor: not-allowed; }
+
+.magic-radio + label,
+.magic-checkbox + label {
+  position: relative;
+  display: block;
+  padding-left: 30px;
+  cursor: pointer;
+  vertical-align: middle; }
+  .magic-radio + label:hover:before,
+  .magic-checkbox + label:hover:before {
+    animation-duration: 0.4s;
+    animation-fill-mode: both;
+    animation-name: hover-color; }
+  .magic-radio + label:before,
+  .magic-checkbox + label:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    content: '';
+    border: 1px solid black; }
+  .magic-radio + label:after,
+  .magic-checkbox + label:after {
+    position: absolute;
+    display: none;
+    top: 2px;
+    left: 7px;
+    box-sizing: border-box;
+    width: 6px;
+    height: 12px;
+    transform: rotate(45deg);
+    border: 2px solid #fff;
+    border-top: 0;
+    border-left: 0;
+    content: ''; }
+
+.magic-radio[disabled] + label,
+.magic-checkbox[disabled] + label {
+  cursor: not-allowed;
+  color: #d4d4d4; }
+  .magic-radio[disabled] + label:hover, .magic-radio[disabled] + label:before, .magic-radio[disabled] + label:after,
+  .magic-checkbox[disabled] + label:hover,
+  .magic-checkbox[disabled] + label:before,
+  .magic-checkbox[disabled] + label:after {
+    cursor: not-allowed; }
+  .magic-radio[disabled] + label:hover:before,
+  .magic-checkbox[disabled] + label:hover:before {
+    border: 1px solid #d4d4d4;
+    animation-name: none; }
+  .magic-radio[disabled] + label:before,
+  .magic-checkbox[disabled] + label:before {
+    border-color: #d4d4d4; }
+
+.magic-radio:checked + label:before,
+.magic-checkbox:checked + label:before {
+  animation-name: none;
+  background-color: #7BA7D3;
+  border: 1px solid #7BA7D3; }
+
+.magic-radio:checked + label:after,
+.magic-checkbox:checked + label:after {
+  display: block; }
