--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -78,11 +78,11 @@ h1 {
   &.bg-blue {
     &:hover {
       color: #fff;
-      background-color: #2F6799;
+      background-color: $darker-blue;
     }
   }
   &.bg-dark-blue {
-    background-color: #2F6799;
+    background-color: $darker-blue;
     font-size: 20px;
     color: #fff;
     transition: all 0.32s ease;
@@ -224,7 +224,7 @@ a.big-btn, button.big-btn {
   .example_f:hover span {
     padding-right: 25px;
   }
-  .example_f:hover span:after {
+  .example_f:hover span:after { 
     opacity: 1;
     right: 0;
   }
@@ -245,6 +245,9 @@ header#masthead {
   }
   .header-logo {
     max-height: 82px;
+  }
+  #searchInput {
+    height: 37px;
   }
   @media screen and (max-width: 480px) {
     .header-hamburger-col {
@@ -937,6 +940,17 @@ footer#siteFooter {
 
 section#downloads {
 
+  #artifactoryZipPackage {
+    .info-circle {
+      right: -30px;
+      top: 0;
+      bottom: 0;
+      margin-top: auto;
+      margin-bottom: auto;
+      height: 29px;
+    }
+  }
+
   button.dropdown-toggle {
     &:after {
       margin-right: 15px;
@@ -969,6 +983,10 @@ section#downloads {
     font-weight: 500;
     &:hover {
       opacity: .9;
+    }
+    &.fcv-cta {
+      width: 225px;
+      height: 57px;
     }
   }
 
@@ -1007,6 +1025,8 @@ section#downloads {
 
   .package-wrapper {
     margin-bottom: 8px;
+    width: 530px;
+    max-width: 100%;
     textarea {
       z-index: -100;
       opacity: 0;
@@ -1059,7 +1079,7 @@ section#downloads {
     }
 
     &.cn-main {
-      width: 344px;
+      width: 342px;
       &#artiZipMain {
         width: auto;
         padding-right: 20px;
@@ -1111,6 +1131,7 @@ section#downloads {
       background-repeat: no-repeat;
       background-position: center center;
       transition: all 0.32s ease;
+      margin-right: 0;
       &:hover {
         background-color: $blue;
         border-color: $blue;
@@ -1381,6 +1402,10 @@ hr.dotted {
   background-size: cover;
 }
 
+.open-sans {
+  font-family: 'Open Sans', sans-serif !important;
+}
+
 body.tribe {
   #conanTribeMemberModal.modal {
     .modal-dialog {
@@ -1560,5 +1585,339 @@ a.green-cta {
   font-size: 20px;
   &:hover {
     background: #4ac750;
+  }
+}
+
+/*the container must be positioned relative:*/
+.autocomplete {
+  position: relative;
+  display: inline-block;
+}
+
+input {
+  border: 1px solid transparent;
+  background-color: #f1f1f1;
+  padding: 4px;
+  font-size: 16px;
+}
+
+input[type=text] {
+  background-color: #f1f1f1;
+  width: 100%;
+}
+
+input[type=submit] {
+  background-color: DodgerBlue;
+  color: #fff;
+  cursor: pointer;
+}
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+
+.autocomplete-items div {
+  padding: 5px;
+  cursor: pointer;
+  background-color: #fff; 
+  border-bottom: 1px solid #d4d4d4; 
+}
+
+/*when hovering an item:*/
+.autocomplete-items div:hover {
+  background-color: #e9e9e9; 
+}
+
+/*when navigating through the items using the arrow keys:*/
+.autocomplete-active {
+  background-color: DodgerBlue !important; 
+  color: #ffffff; 
+}
+
+/* Create two equal columns that float next to each other */
+.at-column-70 {
+  float: left;
+  width: 70%;
+  padding: 5px;
+  text-align: left;
+}
+
+.at-column-30 {
+  float: left;
+  width: 30%;
+  padding: 5px;
+  text-align: left;
+}
+
+/* Clear floats after the columns */
+.at-row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.see-all {
+  text-align: center;
+  padding: 10px !important;
+}
+
+.pkg-name, .pkg-version, .see-all {
+  font-size: 0.75rem;
+} 
+
+@media (min-width: 1025px) {
+  .header-nav .show-lg-and-up{display:block;}
+  .header-nav .show-md-and-down{display:none;}
+}
+
+@media (max-width: 1024px) {
+  .header-nav .show-md-and-down{display:block;}
+  .header-nav .show-lg-and-up{display:none;}
+
+}
+
+//subscribe modal
+#openSourceSubscribeModal {
+  font-size: 20px;
+  font-family: 'Open Sans',sans-serif!important;
+  * {
+    border-radius: 0;
+  }
+  button.close {
+    top: 10px;
+    right: 10px;
+    font-weight: 200;
+    font-size: 20px;
+  }
+  .modal-dialog {
+    max-width: 850px;
+    .modal-body {
+      max-height: 100vh;
+      @media screen and (min-width: 768px) {
+        height: 500px;
+      }
+      .splitter {
+        .left {
+          background: $blue;
+          width: 100%;
+          @media screen and (min-width: 768px) {
+            width: 40%;
+          }
+        }
+        .right {
+          h2 {
+            font-size: 40px;
+          }
+          p {
+            color: #717171;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+          }
+          width: 100%;
+          @media screen and (min-width: 768px) {
+            width: 60%;
+          } 
+        }
+      }
+    }
+  }
+
+  form {
+    ::placeholder {
+      font-family: 'Open Sans', sans-serif !important;
+    }
+    button.mktoButton[type="submit"] {
+      background: $darker-blue;
+      color: white;
+      width: 200px;
+      height: 50px;
+      line-height: 1;
+      font-size: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 0;
+      border: 0;
+      transition: all 0.32s ease;
+      margin-top: 20px;
+      &:hover {
+        background: rgba($darker-blue, .85);
+      }
+    }
+    label#LblEmail, .mktoGutter, .mktoOffset, .mktoClear, .mktoAsterix {
+      display: none !important;
+    }
+    * {
+      font-family: 'Open Sans', sans-serif !important;
+    }
+    .mktoFormRow {
+      width: 330px !important;
+      max-width: 100% !important;
+    }
+    input[type="checkbox"] {
+      opacity: 0;
+    }
+    input[type="email"] {
+      height: 48px;
+      border: 1px solid #686868;
+      font-size: 15px;
+      width: 335px;
+      max-width: 100%;
+      padding: 15px;
+      // font-family: $text-font-stack;
+      border-radius: 0;
+    }
+    label {
+      font-size: 17px !important;
+      // font-family: $text-font-stack;
+      a {
+        // font-family: $text-font-stack;
+        font-size: 17px !important;
+        color: black !important;
+      }
+    }
+    .mktoFormRow:nth-child(2) {
+      >.mktoFieldDescriptor.mktoFormCol {
+        margin-bottom: 0 !important;
+        position: relative;
+        left: -40px;
+        >label#Lblacceptthetermsandconditions {
+          display: none !important;
+        }
+      }
+    }
+    .mktoHtmlText.mktoHasWidth {
+      width: 330px !important;
+      // max-width: 100% !important;
+      span[style="font-size: 10px;"] {
+        position: relative;
+        left: 70px;
+        top: 3px;
+        font-size: 16.7px !important;
+        font-weight: normal;
+        a {
+          font-weight: bold;
+          font-size: 16.7px;
+        }
+        @media screen and (max-width: 576px) {
+          top: 6px;
+        }
+        
+      }
+    }
+    span[style="margin-left: 120px;"] {
+      margin-left: 0 !important;
+    }
+    .marketo-submit-row {
+      margin-top: 15px;
+    }
+    @media screen and (max-width: 576px) {
+      .magic-checkbox + label:before {
+        top: -40px; 
+        left: 10px;
+      }
+      .mkto-checkbox-form-row > .mktoFormCol:not(.mktoFieldDescriptor) {
+        display: none !important;
+      }
+    } 
+  }
+
+}
+
+//magic checkbox
+.magic-checkbox-error {
+  &:before {
+    border-color: red !important;
+    border-width: 2px !important;
+  }
+}
+
+.magic-radio,
+.magic-checkbox {
+  position: absolute;
+  display: none;
+}
+.magic-radio[disabled],
+.magic-checkbox[disabled] {
+  cursor: not-allowed;
+}
+
+.magic-radio + label,
+.magic-checkbox + label {
+  position: relative;
+  display: block;
+  padding-left: 30px;
+  cursor: pointer;
+  vertical-align: middle;
+
+  &:hover {
+    &:before {
+      animation-duration: 0.4s;
+      animation-fill-mode: both;
+      animation-name: hover-color;
+    }
+  }
+  &:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    content: '';
+    border: 1px solid black;
+  }
+  &:after {
+    position: absolute;
+    display: none;
+    top: 2px;
+    left: 7px;
+    box-sizing: border-box;
+    width: 6px;
+    height: 12px;
+    transform: rotate(45deg);
+    border: 2px solid #fff;
+    border-top: 0;
+    border-left: 0;
+    content: '';
+  }
+}
+.magic-radio[disabled] + label,
+.magic-checkbox[disabled] + label {
+  cursor: not-allowed;
+  color: #d4d4d4;
+  &:hover,
+  &:before,
+  &:after {
+    cursor: not-allowed;
+  }
+  &:hover {
+    &:before {
+      border: 1px solid #d4d4d4;
+      animation-name: none;
+    }
+  }
+  &:before {
+    border-color: #d4d4d4;
+  }
+}
+.magic-radio:checked + label,
+.magic-checkbox:checked + label {
+  &:before {
+    animation-name: none;
+    background-color: $blue;
+    border: 1px solid $blue
+  }
+  &:after {
+    display: block;
   }
 }
