--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -246,6 +246,9 @@ header#masthead {
   .header-logo {
     max-height: 82px;
   }
+  .header-dark-blue {
+    background-color: #2F6799 !important;
+  }
   #searchInput {
     height: 37px;
   }
@@ -1228,6 +1231,18 @@ body.downloads {
 }
 //#downloads
 
+.sub-page-hero {
+  background-size: 1920px 100%;
+  background-position: center;
+  h1 {
+    font-size: 20px;
+    font-weight: 300;
+    @media screen and (min-width: 480px) {
+      font-size: 40px;
+    }
+  }
+}
+
 body.privacy-policy {
   ol,
   ul {
@@ -1919,5 +1934,72 @@ input[type=submit] {
   }
   &:after {
     display: block;
+  }
+}
+
+.faq-questions {
+  .container {
+    border-bottom: 1px solid #E6E6E6;
+
+    @media screen and (max-width: 480px) {
+      border-bottom: 0;
+    }
+  }
+  li.faq-anchor {
+    list-style: none;
+    padding-bottom: 15px;
+    padding-right: 15px;
+    a {
+      color: $blue;
+    }
+  }
+}
+
+.faq-separator {
+  height: 1px;
+  width: 100%;
+  background: #E6E6E6
+}
+
+#faqAccordion {
+  li.faq-element {
+    border-bottom: 1px solid #E6E6E6;
+    padding: 15px;
+    .top {
+      cursor: pointer;
+    }
+    .question {
+      font-size: 17px;
+      line-height: 1.2;
+      font-weight: 400;
+      transition: all 0.32s ease;
+      max-width: 900px;
+
+      @media screen and (min-width: 480px) {
+        font-size: 20px;
+      }
+      @media screen and (max-width: 480px) {
+        margin-bottom: 15px;
+      }
+    }
+    .answer {
+      font-size: 13px;
+      color: #757575;
+      max-width: 900px;
+      a {
+        color: $darker-blue;
+        text-decoration: underline;
+      }
+
+      @media screen and (min-width: 480px) {
+        font-size: 16px;
+      }
+      @media screen and (max-width: 480px) {
+        color: black;
+      }
+    }
+    path,svg {
+      transition: all 0.32s ease;
+    }
   }
 }
