MAR-3350 add user stories archive and single. add templates functionality

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -6,25 +6,25 @@
         @@if (noJS === true) {
           <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled">
             <li><a class="mr-2" href="https://twitter.com/conan_io"><img alt="twitter" class="lazy"
-                  src="img/social/twitter.svg"></a></li>
+                  src="@@webRoot/img/social/twitter.svg"></a></li>
             <li><a class="mr-2" href="https://facebook.com/conan.io"><img alt="facebook" class="lazy"
-                  src="img/social/facebook.svg"></a></li>
+                  src="@@webRoot/img/social/facebook.svg"></a></li>
             <li><a class="mr-2" href="https://cpplang.​slack.​com/?id=conan"><img alt="slack" class="lazy"
-                  src="img/social/slack.svg"></a></li>
+                  src="@@webRoot/img/social/slack.svg"></a></li>
             <li><a class="mr-2" href="https://github.com/conan-io"><img alt="github" class="lazy"
-                  src="img/social/github.svg"></a></li>
+                  src="@@webRoot/img/social/github.svg"></a></li>
           </ul>
         }
         @@if (noJS === false) {
           <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled">
             <li><a class="mr-2" href="https://twitter.com/conan_io"><img alt="twitter" class="lazy"
-                  data-src="img/social/twitter.svg"></a></li>
+                  data-src="@@webRoot/img/social/twitter.svg"></a></li>
             <li><a class="mr-2" href="https://facebook.com/conan.io"><img alt="facebook" class="lazy"
-                  data-src="img/social/facebook.svg"></a></li>
+                  data-src="@@webRoot/img/social/facebook.svg"></a></li>
             <li><a class="mr-2" href="https://cpplang.​slack.​com/?id=conan"><img alt="slack" class="lazy"
-                  data-src="img/social/slack.svg"></a></li>
+                  data-src="@@webRoot/img/social/slack.svg"></a></li>
             <li><a class="mr-2" href="https://github.com/conan-io"><img alt="github" class="lazy"
-                  data-src="img/social/github.svg"></a></li>
+                  data-src="@@webRoot/img/social/github.svg"></a></li>
           </ul>
         }
 
@@ -40,7 +40,7 @@
             <div class="col-sm-3">
               <h4 class="blue mb-1">GET</h4>
               <ul>
-                <li><a href="downloads.html" id="download_btn_bottom">Download </a></li>
+                <li><a href="@@webRoot/downloads.html" id="download_btn_bottom">Download </a></li>
                 <li><a href="https://conan.io/center/">Conan-Center </a></li>
                 <li><a href="https://github.com/conan-io/conan" rel="nofollow">GitHub </a></li>
               </ul>
@@ -55,8 +55,8 @@
             <div class="col-sm-3">
               <h4 class="blue mb-1">Legal</h4>
               <ul>
-                <li><a href="privacy-policy.html">Privacy Policy </a></li>
-                <li><a href="terms-conditions.html">Terms </a></li>
+                <li><a href="@@webRoot/privacy-policy.html">Privacy Policy </a></li>
+                <li><a href="@@webRoot/terms-conditions.html">Terms </a></li>
                 <li><a href="#" class="ot-sdk-show-settings"></a></li>
               </ul>
             </div>
