--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2029,3 +2029,57 @@ body.user-stories {
     }
   }
 }
+
+body.single-user-story {
+  .download {
+    .image {
+      filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.15)); 
+    }
+  }
+  section.breadcrumbs {
+    a {
+      font-size: 20px;
+      line-height: 1.3;
+    }
+  }
+  section.user-story-top {
+    h1 {  
+      max-width: 664px; 
+      line-height: 1.33;
+      font-size: 23px; 
+      @media screen and (min-width: 662px) {
+        font-size: 30px;
+      }
+    }
+    .position-relative {
+      img.position-absolute {
+        top: -40px;
+        left: 0;
+      }
+    }
+    .top-together-images {
+      max-width: 664px;
+      .plus {
+        font-size: 38px;
+      }
+      .blue-line {
+        height: 1px;
+        right: 28px;
+        top: 0;
+        width: 2000px;
+      }
+    }
+  }
+  section.user-story-content {
+    .content {
+      max-width: 840px;
+      h2 {
+        font-size: 20px;
+        line-height: 1.3;
+        text-transform: uppercase;
+        font-weight: bold;
+      }
+    }
+  }
+}
+
