--- a/src/templates/single-user-story-page.html
+++ b/src/templates/single-user-story-page.html
@@ -108,11 +108,11 @@ contentHTML
       <div class="row justify-content-between">
         <div class="col-lg-8">
           <div class="content">
-            @@contentHTML
+            @@contentHTML 
           </div>
         </div>
-        <div class="col-lg-4 d-lg-none">
-          <div class="download text-center">
+        <div class="col-lg-4 d-lg-none mt-4">
+          <div class="download text-center border-top pt-4">
             <div class="image pb-3">
               <img src="@@downloadFileImgSrc" alt="Download File" class="img-fluid">
             </div>
