MAR-3350 - Added 'User Stories' to the main nav

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -5,21 +5,30 @@
       <div class="col-2 d-flex d-lg-none align-items-center justify-content-end"> <button
           class="d-block d-lg-none hamburger hamburger--collapse text-right" type="button"><span
             class="hamburger-box"><span class="hamburger-inner"></span></span></button></div>
-      <div class="col-lg-6 text-right d-flex align-items-center justify-content-end">
+      <div class="col-lg-7 text-right d-flex align-items-center justify-content-end">
         <nav class="header-nav align-items-center d-lg-flex" id="headerNav">
+          <!--Conan-Center-->
           <a href="https://conan.io/center/" class="btn bg-blue white">
             <img src="@@webRoot/img/small-search.svg" alt="Search">
             Conan-Center
           </a>
+          <!-- FAQ -->
           <a href="@@webRoot/faq.html" class="btn bg-bright-gray black"> 
               FAQ
           </a>
+          <!-- Docs -->
           <a href="https://docs.conan.io/" class="btn bg-bright-gray black">
               Docs
           </a>
+          <!-- Blog -->
           <a href="https://blog.conan.io/" class="btn bg-bright-gray black">
               Blog
           </a>
+          <!-- User Stories -->
+          <a href="@@webRoot/user-stories.html" class="btn bg-bright-gray black">
+              User Stories
+          </a>
+          <!-- Github -->
           <a href="https://github.com/conan-io/conan" rel="nofollow noopener noreferrer" target="_blank" class="btn bg-bright-gray">
               <img src="@@webRoot/img/small-github.svg" alt="Github">
           </a>
