--- a/src/templates/single-user-story-page.html
+++ b/src/templates/single-user-story-page.html
@@ -58,7 +58,14 @@ contentHTML
             <div class="position-absolute d-none d-lg-block">
               <div class="download text-center">
                 <div class="image pb-3">
-                  <img src="@@downloadFileImgSrc" alt="Download File" class="img-fluid">
+                  <img
+                    class="img-fluid"
+                    alt="Download File"
+                    height="405"
+                    src="@@downloadFileImgSrc"
+                    width="317"
+                    height="405"
+                  >
                 </div>
                 <a
                   class="big-btn bg-blue white mt-4"
