--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -25,11 +25,11 @@
               Blog
           </a>
           <!-- User Stories -->
-          <a href="@@webRoot/user-stories.html" class="btn bg-bright-gray black">
+          <a href="@@webRoot/user-stories.html" class="btn bg-bright-gray black d-none">
               User Stories
           </a>
           <!-- Github -->
-          <a href="https://github.com/conan-io/conan" rel="nofollow noopener noreferrer" target="_blank" class="btn bg-bright-gray">
+          <a class="btn bg-bright-gray" href="https://github.com/conan-io/conan" rel="nofollow noopener noreferrer" target="_blank">
               <img src="@@webRoot/img/small-github.svg" alt="Github">
           </a>
         </nav>
