--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1687,3 +1687,12 @@ body.single-user-story section.user-story-content .content {
     line-height: 1.3;
     text-transform: uppercase;
     font-weight: bold; }
+
+section#userStoriesHomeSection {
+  overflow: hidden; }
+  section#userStoriesHomeSection .container .content {
+    width: 722px;
+    max-width: 100%; }
+  section#userStoriesHomeSection img.dots-background {
+    bottom: 0;
+    left: 0; }
